--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     },
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/stripe": "^8.0.417",
         "axios": "^0.21.1",
         "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "mongoose": "^5.12.1",
         "nodemon": "^2.0.7",
         "passport": "^0.4.1",
-        "passport-google-oauth20": "^2.0.0"
+        "passport-google-oauth20": "^2.0.0",
+        "stripe": "^8.156.0"
     }
 }
